--- a/src/resources/English.properties
+++ b/src/resources/English.properties
@@ -1,6 +1,7 @@
 BackCommand=Back
 NextCommand=Next
 HomeCommand=Home
+FavoriteCommand=Favorite
 GoCommand=Go
 AddFavoriteCommand=Add Favorites
 FavoritePrompt=Enter name
